--- a/bugs/Dima.Api/appsettings.json
+++ b/bugs/Dima.Api/appsettings.json
@@ -1,8 +1,8 @@
 {
-  "FrontendUrl": "http://localhost:5028",
-  "BackendUrl": "http://localhost:5164",
+  "FrontendUrl": "https://localhost:7288",
+  "BackendUrl": "https://localhost:7298",
   "ConnectionStrings": {
-    "DefaultConnection": ""
+    "DefaultConnection": "Server=localhost;Database=caca-aos-bugs-db;User Id=sa;Password=admin123!@#;TrustServerCertificate=true"
   },
   "StripeApiKey": "",
   "Logging": {
